--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .idea
-client/package-lock.json
-client/node_modules
+.vscode
 
-server/package-lock.json
-server/node_modules
+*/package-lock.json
+*/node_modules
+*/.env
+*/dist
